--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bg.css">
 </head>
 <body id="gradient">
-    <h1>COOL Generaton</h1>
+    <h1>super Generaton</h1>
     <input id="color1" type="color" name="colo1" value="#00ff00">
     <input id="color2" type="color" name="colo2" value="#ff0000">
     <input type="text">
