--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input id="color1" type="color" name="colo1" value="#00ff00">
     <input id="color2" type="color" name="colo2" value="#ff0000">
     <input type="text">
-    <h2>current css background</h2>
+    <h2>this is current background</h2>
     <script src="bg.js"></script>
 </body>
 </html>
